Add screen style & font

--- a/aryks/static/wrapkit/scss/app.scss
+++ b/aryks/static/wrapkit/scss/app.scss
@@ -8,7 +8,8 @@ File: scss
 /******************* 
 This is the font import from the google api 
 *******************/
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800');
+//@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800');
+@import url('https://fonts.googleapis.com/css?family=Glober:300,400,500,600,700,800');
 @font-face {
   font-family: 'Calafia-Regular';
   src: url('../../assets/font/Calafia-Regular.eot?#iefix') format('embedded-opentype'),  url('../../assets/font/Calafia-Regular.otf')  format('opentype'),
