--- a/aryks/static/wrapkit/scss/variable.scss
+++ b/aryks/static/wrapkit/scss/variable.scss
@@ -7,8 +7,12 @@ File: scss
 
 // Variables - here you can change this global values of the UI Kit
 
-$bodyfont:'Montserrat', sans-serif;
-$headingfont:'Montserrat', sans-serif;
+//$bodyfont:'Montserrat', sans-serif;
+//$headingfont:'Montserrat', sans-serif;
+//$stylishfont: 'Calafia-Regular';
+
+$bodyfont:'Glober', sans-serif;
+$headingfont:'Glober', sans-serif;
 $stylishfont: 'Calafia-Regular';
 
 /*Theme Colors*/
