--- a/infoshop/templates/infoshop/category.html
+++ b/infoshop/templates/infoshop/category.html
@@ -1,8 +1,24 @@
 {% extends "base.html" %}
 
+{% block title %}{{ category.title }}{% endblock %}
+
+{% load static %}
+
+{% get_media_prefix as MEDIA_PREFIX %}
+
 {% block content %}
-    !!!-{{ current_category.name }}-!!!
-    {% for c in category_family %}
+    <div class="wall masked" style="background-image: url({{ MEDIA_URL }}{{ category.image }})">
+        <div class="mask black-criss-cross"></div>
+        <div class="container">
+            <row class="justify-content-center">
+                <col-lg-8 class="col-md-6 align-self-center text-center">
+                    <h1 class="title">{{ category.name }}</h1>
+                    <div class="h4">{{ category.description }}</div>
+                </col-lg-8>
+            </row>
+        </div>
+    </div>
+    {% for c in category_children %}
         <a href="{% url 'infoshop:by_category' c.slug %}">{{ c.name }}</a> <br>
     {% endfor %}
 	{% for p in products %}
