--- a/aryks/static/wrapkit/scss/variable.scss
+++ b/aryks/static/wrapkit/scss/variable.scss
@@ -60,6 +60,7 @@ $dark-transparent:rgba(0, 0, 0, 0.05);
 
 /*Normal Color*/
 $white: #ffffff;
+$black: #333333;
 $red: #fb3a3a;
 $yellow: #fed700;
 $purple: #7460ee;
