--- a/infoshop/templates/infoshop/category.html
+++ b/infoshop/templates/infoshop/category.html
@@ -1,25 +1,37 @@
 {% extends "base.html" %}
 
-{% block title %}{{ category.title }}{% endblock %}
+{% block title %}{{ category.pagetitle }}{% endblock %}
 
 {% block content %}
     <div class="wall masked" style="background-image: url({{ MEDIA_URL }}{{ category.image }})">
         <div class="mask black-criss-cross"></div>
         <div class="container">
-            <row class="justify-content-center">
-                <col-lg-8 class="col-md-6 align-self-center text-center">
-                    <h1 class="title">{{ category.name }}</h1>
+            <div class="row justify-content-center">
+                <div class="col-lg-8 col-md-6 align-self-center text-center">
+                    <h1 class="title text-white">{{ category.name }}</h1>
                     <div class="h4">{{ category.description }}</div>
-                </col-lg-8>
-            </row>
+                </div>
+            </div>
         </div>
     </div>
     {% for c in category_children %}
         <a href="{% url 'infoshop:by_category' c.slug %}">{{ c.name }}</a> <br>
     {% endfor %}
-	{% for p in products %}
-        {{ p.name }}<br/>
-{#        <a href="{% url 'product_detail' p.slug %}">{{ p.name }}</a> <br>#}
-	{% endfor %}
+    <div class="container-fluid p-20">
+        <div class="row">
+            {% for p in products %}
+                <div class="col-md-3">
+                    <div class="card card-shadow" data-aos="flip-left" data-aos-duration="1200">
+                        <a href="{% url 'infoshop:product_detail' p.slug %}" class="img-ho"><img class="card-img-top" src="{{ MEDIA_URL }}{{ p.image }}" alt="{{ p.pagetitle }}"></a>
+                        <div class="card-body">
+                            <h5 class="font-medium m-b-0">{{ p.name }}</h5>
+                            {% if category_children %}<p class="m-b-0 font-14">{{ p.category.menutitle}}</p>{% endif %}
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+
+        </div>
+    </div>
 
 {% endblock content %}
