--- a/infoshop/templates/infoshop/category.html
+++ b/infoshop/templates/infoshop/category.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 
+{% load thumbnail %}
 {% block title %}{{ category.pagetitle }}{% endblock %}
 
 {% block content %}
-    <div class="wall masked" style="background-image: url({{ MEDIA_URL }}{{ category.image }})">
+{#    {% thumbnail category.wall "2560" as wall %}#}
+    <div class="wall masked" style="background-image: url({{ MEDIA_URL }}{{ category.wall }})">
         <div class="mask black-criss-cross"></div>
         <div class="container">
             <div class="row justify-content-center">
@@ -22,7 +24,8 @@
             {% for p in products %}
                 <div class="col-md-3">
                     <div class="card card-shadow" data-aos="flip-left" data-aos-duration="1200">
-                        <a href="{% url 'infoshop:product_detail' p.slug %}" class="img-ho"><img class="card-img-top" src="{{ MEDIA_URL }}{{ p.image }}" alt="{{ p.pagetitle }}"></a>
+                        <a href="{% url 'infoshop:product_detail' p.slug %}" class="img-ho"><img class="card-img-top" src="{{ p.image|thumbnail_url:'product_list' }}" alt="{{ p.pagetitle }}"></a>
+{#                        <a href="{% url 'infoshop:product_detail' p.slug %}" class="img-ho"><img class="card-img-top" src="{{ MEDIA_URL }}{{ p.image }}" alt="{{ p.pagetitle }}"></a>#}
                         <div class="card-body">
                             <h5 class="font-medium m-b-0">{{ p.name }}</h5>
                             {% if category_children %}<p class="m-b-0 font-14">{{ p.category.menutitle}}</p>{% endif %}
