Update product list style

--- a/aryks/static/wrapkit/scss/screen.scss
+++ b/aryks/static/wrapkit/scss/screen.scss
@@ -89,7 +89,7 @@
   }
 }
 
-.oko-pcard- {
+.oko-pcard {
   text-align: center;
 }
 
@@ -99,6 +99,13 @@
   position: relative;
   text-align: left;
   display: inline-block;
+  box-shadow: 2px 2px 10px rgba(#333, .25);
+  transition: all ease-out .5s;
+
+  &:hover {
+    transform: perspective(400px) rotate3d(1,10,-1, -12deg);
+    box-shadow: 20px 10px 20px rgba(#333, .25);
+  }
 }
 
 .oko-pcard-link {
