Add breadcrumbs to catalog

--- a/aryks/static/wrapkit/scss/screen.scss
+++ b/aryks/static/wrapkit/scss/screen.scss
@@ -1,4 +1,8 @@
 
+h1 {
+  font-weight: 700;
+}
+
 sup.label {
   vertical-align: super;
 }
@@ -398,15 +402,7 @@ sup.label {
   color: rgba(0, 0, 0, 0.6);
 }
 
-.oko-link-group {
-
-  .oko-link {
-    margin-right: 1rem;
-    margin-bottom: .5rem;
-  }
-}
-
-.oko-link-category {
+.oko-link {
   text-decoration: underline;
   font-size: 1.2rem;
   font-weight: 600;
@@ -415,6 +411,11 @@ sup.label {
   .label {
     margin-left: .5rem;
     padding: 3px 5px 0 5px;
+  }
+
+  .oko-link-group & {
+    margin-right: 1rem;
+    margin-bottom: .5rem;
   }
 }
 
