Update product template

--- a/aryks/static/wrapkit/scss/app.scss
+++ b/aryks/static/wrapkit/scss/app.scss
@@ -689,7 +689,7 @@ Labels
 *******************/
 
 .label {
-    padding: 3px 15px;
+    padding: 5px 12px 2px 12px;
     line-height: 13px;
     color: $white;
     font-weight: 400;
