--- a/aryks/static/wrapkit/scss/variable.scss
+++ b/aryks/static/wrapkit/scss/variable.scss
@@ -18,7 +18,7 @@ $stylishfont: 'Calafia-Regular';
 /*Theme Colors*/
 $bodycolor: #ffffff;
 $headingtext: #3e4555;
-$bodytext: #8d97ad; 
+$bodytext: #626c81;
 $themecolor: #316ce8; 
 $themecolor-alt: #26c6da;
 $themecolor-dark: #028ee1;
